[tool.poetry]
name = "USer-Reg-API"
version = "0.1.0"
description = "my first fastapi project"
authors = ["Ikechukwu-Christian <christainekwueme23@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
pytest = "^8.1.1"
passlib = "^1.7.4"
pydantic-extra-types = "^2.6.0"
phonenumbers = "^8.13.33"
bcrypt = "^4.1.2"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
